--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,22 @@ body {
     text-wrap: balance;
   }
 }
+
+.bg-grid {
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.1) 1px, transparent 1px),
+                    linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+  background-size: 20px 20px;
+}
+
+  .brightness-50 {
+    filter: brightness(0.5);
+}
+
+.brightness-70 {
+  filter: brightness(0.7);
+}
+
+.brightness-150 {
+  filter: brightness(1.5);
+}
+
